# 2019-aoc-stuff

./: .gitignore
d1/: package-lock.json  package.json  q1.js  q2.js
d11/: Cargo.toml
d11/src/: interpreter.rs  main.rs  world.rs
d13/: Cargo.toml  input-q2.txt  package.json  webpack.config.js
d13/src/: arcade.rs  interpreter.rs  main.rs  world.rs
d13/src/lib/: arcade.rs  interpreter.rs  mod.rs  world.rs
d13/visualizer/: index.css  index.html  index.js
d14/: .gitignore  Program.fs  Solve.fs  d14.fsproj  d14.sln  input.txt
d14/d14.Lib/: Parser.fs  Solve.fs  d14.Lib.fsproj
d14/d14.Tests/: Tests.fs  d14.Tests.fsproj
d14_idr_todo/: Parse.idr  bootstrap.nix  d14.ipkg  deps.nix  hello.js  hello_2.js  main.idr
d15/: webpack.config.js
d15/src/: main.rs
d15/src/lib/: arcade.rs  interpreter.rs  mod.rs  robot.rs  runner.rs  world.rs
d24/: GPUComputationRenderer.js  index.html  index.js  index.old.js  package.json  simulate.fs.js  test.js  webpack.config.js
d3/: .gitignore  compilation-error.txt  package.json  packages.dhall  spago.dhall  test.dhall
d3/src/: Main.purs  Main.purs.spec  Solution.purs  Solution.purs.spec  Test.purs.spec
d4/: environment.yml  solve.py
d5/src/: interpreter.rs  main.rs
d6/: environment.yml  solution.py
d7/src/: interpreter.rs  main.rs
d8/: index.js  package.json
d9/: Cargo.toml
d9/src/: interpreter.rs  main.rs
